be/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pdf-table-extractor-be-svc
spec:
  type: ClusterIP
  ports:
  - name: pdf-table-extractor-be-port
    port: 80
    targetPort: 8000
  selector:
    app: pdf-table-extractor-be
